2013-01-28  Andy Buckley  <andy.buckley@cern.ch>

	* More methods, and public access to most data members on AlphaS.

2013-01-25  Andy Buckley  <andy.buckley@cern.ch>

	* Adding sorting of the flavor array when reading from metadata
	(and use of Boost range sort)

	* Fixed clearing of temp double* array variable so subgrid loading
	now works. Interpolation across subgrid boundaries not tested!

	* Added two more ways to assign the grid data arrays, but the
	original way seems fine. Now defining the grid data x/Q2 loop
	order.

	* Fixed the AnalyticPDF example: now simpler _and_ it works :)

	* A bit of virtual function rethinking on PDF.

2013-01-23  Andy Buckley  <andy.buckley@cern.ch>

	* Adding code to allow comments in the grid data blocks.

	* Some DESIGN doc cleanup.

	* Moving tests and their output data files into the tests/ dir.

	* Build system tweaks: adding --with args to configure for Boost and yaml-cpp, and a 'doxy' target.

2013-01-22  Andy Buckley  <andy.buckley@cern.ch>

	* Removing defunct data and knot members from GridPDF.

	* Including general doc files in Doxygen output and finessing Doxygen comments.

	* Adding Doxyfile.in with basic Doxy config.

	* Adding initial CONFIGFLAGS and CODINGSTYLE doc files.

	* AlphaS_ODE reworking -- lots needed.

2013-01-21  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an empty AlphaS_Ipol and making AlphaS_Analytic work with a smooth Lambda4/5 transition.

	* First PDF interpolation test added to testgrid.cc. Looks like it works!

	* Refactoring of the bicubic interpolator.

	* Fixed multi_array reshaping in PDFGrid loading.

	* Removing PDFSet files.

	* Disabling PWD searching due to infinite loop in calls to paths().

2013-01-20  Andy Buckley  <andy.buckley@cern.ch>

	* More alpha_s calculator evolution, mainly file splitting and adding more data members.

2013-01-19  Andy Buckley  <andy.buckley@cern.ch>

	* Making inter/extrapolator loading lazy (and neater as a consequence!)
